--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
 flask
 pymongo
 python-dotenv
-torch
-torchvision
+torch==2.8.0+cpu
+torchvision==0.23.0+cpu
 Pillow
